# mingw-w64-ironcrate

./: AUTHORS  ChangeLog  LICENSE.BSD  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  update_liblist.pl
error/: __ic_doserrno.c  __ic_sys_errlist.c  __ic_sys_nerr.c  _ic_errno.c  _ic_get_doserrno.c  _ic_get_errno.c  _ic_get_errno_from_winerr.c  _ic_get_sys_errmsg.c  _ic_mapwinerr.c  _ic_set_doserrno.c  _ic_set_errno.c  _ic_sys_errlist.c  _ic_sys_nerr.c  list.am
except/: __ic_excpt_act_table.c  __ic_excpt_act_table_num.c  __ic_excpt_act_table_sz.c  list.am
include/: ic_defines.h  ic_fcts.h  ic_fcts_int.h  ic_gbls.h  ic_gbls_int.h  ic_stdc.h  ic_types.h  icrt.h  icrt_defs.h  icrt_map.h  icrt_memory.h  icrt_string.h  icrt_thread.h  w64crt.h  w64crt_defs.h  w64crt_map.h  w64memory.h  w64string.h
locale/: __ic_add_locale_ref.c  __ic_cmpMBString.c  __ic_cmpWCString.c  __ic_free_lc_time.c  __ic_free_lconv_mon.c  __ic_free_lconv_num.c  __ic_free_thrdlocinfo.c  __ic_getlocaleinfoMBString.c  __ic_gettypeMBString.c  __ic_global_li.c  __ic_global_locale_status.c  __ic_global_locinfo.c  __ic_global_mbcinfo.c  __ic_is_systemcp.c  __ic_ismbcodepage.c  __ic_lc_clike.c  __ic_lc_codepage.c  __ic_lc_collate_cp.c  __ic_lc_handle.c  __ic_lc_id.c  __ic_lc_time_c.c  __ic_lc_time_curr.c  __ic_lcmapMBString.c  __ic_lcmapWCString.c  __ic_lconv.c  __ic_lconv_c.c  __ic_lconv_str_decimal.c  __ic_lconv_str_empty.c  __ic_locale_changed.c  __ic_mb_cur_max.c  __ic_mbcodepage.c  __ic_mblcid.c  __ic_mbulinfo.c  __ic_newclmap.c  __ic_newctype.c  __ic_newcumap.c  __ic_ptmbcinfo.c  __ic_release_locale_ref.c  __ic_str_C.c  __ic_tls_li.c  (+14 more)
lock/: _w64_lock.c  icrt_lock.c
memory/: __ic_memicmp_a.c  __ic_newhandle_fct.c  __p_ic_amblksiz.c  _ic_aligned_free.c  _ic_aligned_malloc.c  _ic_aligned_msize.c  _ic_aligned_offset_malloc.c  _ic_aligned_offset_realloc.c  _ic_aligned_offset_recalloc.c  _ic_aligned_realloc.c  _ic_aligned_recalloc.c  _ic_amblksiz.c  _ic_callnewh.c  _ic_expand.c  _ic_freea.c  _ic_get_amblksiz.c  _ic_get_heap_handle.c  _ic_get_sbh_threshold.c  _ic_heap_abort.c  _ic_heap_init.c  _ic_heap_term.c  _ic_heapadd.c  _ic_heapchk.c  _ic_heapmin.c  _ic_heapset.c  _ic_heapused.c  _ic_heapwalk.c  _ic_markalloca.c  _ic_memccpy.c  _ic_memicmp.c  _ic_memicmp_l.c  _ic_msize.c  _ic_newmode.c  _ic_query_new_handler.c  _ic_recalloc.c  _ic_set_amblksiz.c  _ic_set_new_handler.c  _ic_set_sbh_threshold.c  _ic_theheap.c  aligned.h  (+39 more)
misc/: crtmsgboxA.c  crtmsgboxW.c  ic_rand.c  ic_rand_s.c  ic_srand.c  list.am  maperr.c  osdata.c
sort/: _ic_lfind.c  _ic_lfind_s.c  _ic_lsearch.c  _ic_lsearch_s.c  ic_bsearch.c  ic_bsearch_s.c  ic_qsort.c  ic_qsort_s.c  list.am
string/: memccpy.c  memchr.c  memcmp.c  memcpy.c  memicmp.c  memmove.c  memset.c  strcat.c  strchr.c  strcmp.c  strcmpi.c  strcpy.c  strcspn.c  stricmp.c  strlen.c  strlwr.c  strncat.c  strncmp.c  strncpy.c  strnicmp.c  strnlen.c  strnset.c  strpbrk.c  strrchr.c  strrev.c  strset.c  strspn.c  strstr.c  strupr.c
testsuite/: list.am
testsuite/dir/: chmkrmdir1.c  wchmkrmdir1.c
testsuite/mbstring/: _ismbbalnum.c  _ismbbalnum_l.c  _ismbbalpha.c  _ismbbalpha_l.c  _ismbbgraph.c  _ismbbgraph_l.c  _ismbbkalnum.c  _ismbbkalnum_l.c  _ismbbkana.c  _ismbbkana_l.c  _ismbbkprint.c  _ismbbkprint_l.c  _ismbbkpunct.c  _ismbbkpunct_l.c  _ismbblead.c  _ismbblead_l.c  _ismbbprint.c  _ismbbprint_l.c  _ismbbpunct.c  _ismbbpunct_l.c  _ismbbtrail.c  _ismbbtrail_l.c  _mbbtype.c  _mbbtype_l.c
testsuite/memory/: memccpy.c  memchr.c  memcmp.c  memcpy.c  memcpy_s.c  memicmp.c  memicmp_l.c  memmove.c  memmove_s.c  memset.c
testsuite/string/: __strncnt.c  _strdate.c  _strdate_s.c  _stricoll.c  _stricoll_l.c  _strlwr.c  _strlwr_s_l.c  _strncoll.c  _strncoll_l.c  _strnicmp.c  _strnicmp_l.c  _strnicoll.c  _strnicoll_l.c  _strnset.c  _strnset_s.c  _strrev.c  _strset.c  _strset_s.c  _strtime.c  _strtime_s.c  _strupr.c  _strupr_s_l.c  strcat.c  strcat_s.c  strchr.c  strcmp.c  strcoll.c  strcoll_l.c  strcpy.c  strcpy_s.c  strcspn.c  strdup.c  stricmp.c  stricmp_l.c  strlen.c  strncat.c  strncat_s.c  strncmp.c  strncpy.c  strncpy_s.c  (+6 more)
testsuite/testlib/: main_test.c  testlib.h
testsuite/time/: strdate.c  strdate_s.c  strtime.c  strtime_s.c
threads/: __ic_initCritSect.c  __ic_threadhandle.c  __ic_threadid.c  list.am  locks.c  tls.c
